# CyC_example

./: .gitmodules  CMakeLists.txt  README.md
etc/calibration/: cam_usb.cal
etc/datablocks/: example.conf  vision.conf
etc/kinematics/: ar_drone_2.conf  vehicle_scout.conf
etc/missions/: dynamic_mission.csv  markers_map.csv
etc/pipelines/: vision.conf
src/Filter_HW_Camera/: CMakeLists.txt
src/Filter_HW_Camera/src/: CCameraFilter.cpp  CCameraFilter.h
src/Filter_Vision_BinarySegmentation/: CMakeLists.txt
src/Filter_Vision_BinarySegmentation/src/: CBinarySegmentationFilter.cpp  CBinarySegmentationFilter.h
